syntax = "proto3";

import "com/sunya/electionguard/protogen/common.proto";

option java_package = "com.sunya.electionguard.protogen";
option java_outer_classname = "CiphertextBallotProto";

// An encrypted ballot that has been cast or spoiled.
message SubmittedBallot {
  enum BallotBoxState {
    UNKNOWN = 0;
    CAST = 1;
    SPOILED = 2;
  }

  string object_id = 1; // a unique Ballot ID created by the external system
  string ballot_style_id = 2; // The object_id of the BallotStyle in the Election Manifest
  ElementModQ manifest_hash = 3; // Hash of the manifest
  ElementModQ tracking_hash = 4; // Unique ballot tracking hash for this ballot, aka code
  ElementModQ previous_tracking_hash = 5; // Previous ballot tracking hash or seed hash, aka code_seed
  repeated CiphertextBallotContest contests = 6;
  int64 timestamp = 7; // Timestamp at which the ballot encryption is generated, in seconds since the epoch UTC.
  ElementModQ crypto_hash = 8; // The hash of the encrypted ballot representation
  ElementModQ nonce = 9; // The nonce used to encrypt this ballot. TODO Issue #47
  BallotBoxState state = 10;
}

// Encrypted selections for a specific contest.
message CiphertextBallotContest {
  string object_id = 1; // matches the ContestDescription.object_id
  int32 sequence_order = 2; // matches the ContestDescription.object_id
  ElementModQ description_hash = 3; // Hash of the contest description
  repeated CiphertextBallotSelection selections = 4;
  ElementModQ crypto_hash = 5; // The hash of the encrypted values
  ElGamalCiphertext ciphertext_accumulation = 6;  // The contest total (A, B)
  ElementModQ nonce = 7; // The nonce used to generate the encryption. TODO Issue #47
  ConstantChaumPedersenProof proof = 8;  // The proof that the sum of the selections does not exceed the maximum
               // available selections for the contest, and that the proof was generated with the nonce
}

// Encryption of a specific selection.
message CiphertextBallotSelection {
  string object_id = 1;
  int32 sequence_order = 2; // matches the ContestDescription.object_id
  ElementModQ description_hash = 3; // Hash of the selection description
  ElGamalCiphertext ciphertext = 4; // The encrypted representation of the vote field
  ElementModQ crypto_hash = 5; // The hash of the encrypted values
  bool is_placeholder_selection = 6;
  ElementModQ nonce = 7; // The nonce used to generate the encryption. TODO Issue #47
  DisjunctiveChaumPedersenProof proof = 8; // The proof that demonstrates the selection is an encryption of 0 or 1,
                                           // and was encrypted using the nonce.
  ElGamalCiphertext extended_data = 9;     // Not used
}

message ConstantChaumPedersenProof {
  ElementModP pad = 1;
  ElementModP data = 2;
  ElementModQ challenge = 3;
  ElementModQ response = 4;
  int32 constant = 5;
}

message DisjunctiveChaumPedersenProof {
  ElementModP proof_zero_pad = 1;
  ElementModP proof_zero_data = 2;
  ElementModP proof_one_pad = 3;
  ElementModP proof_one_data = 4;
  ElementModQ proof_zero_challenge = 5;
  ElementModQ proof_one_challenge = 6;
  ElementModQ challenge = 7;
  ElementModQ proof_zero_response = 8;
  ElementModQ proof_one_response = 9;
}